@@ -51,7 +51,7 @@ setMethod(f="plot",
           definition=function (x,
                                xlab="", ylab="",
                                asp,
-                               clatitude, clongitude, span,
+                               clongitude, clatitude, span,
                                projection, parameters=NULL, orientation=NULL,
                                ## center, span,
                                expand=1,
