@@ -6,10 +6,10 @@
 
 \description{Plot meridians (lines of constant latitude) on a existing map}
 
-\usage{mapMeridians(lat, lty='solid', lwd=0.5*par('lwd'), col='lightgray', \dots)}
+\usage{mapMeridians(latitude, lty='solid', lwd=0.5*par('lwd'), col='lightgray', \dots)}
 
 \arguments{
-    \item{lat}{either a boolean indicating whether to draw a meridian grid, or
+    \item{latitude}{either a boolean indicating whether to draw a meridian grid, or
         a single number to indicate the increment in meridian latitudes, or a
         vector of latitudes at which to draw meridians.}
 
