@@ -1,7 +1,8 @@
 0.9-13
 - switch the argument order to put longitude before latitude in:
   as.coastline(), equatorialToLocalHorizontal(), geodDist(), geodXy(),
-  moonAngle(), read.lisst(), sunAngle(), and webtide().
+  moonAngle(), plot.coastline(), read.lisst(), sunAngle(),
+  topoInterpolate() and webtide().
 - magneticField() replaces magneticDeclination()
 - binApply() added
 - ungrid() added
